editorextension: fix crash in finding bracket and dolloar pairs

When col is the end of the line, we can't do textline[col].

BUG: 484173